Fixed scrollbar visible on gmaps popup

--- a/app/styles/_fonts.scss
+++ b/app/styles/_fonts.scss
@@ -23,36 +23,12 @@
 }
 
 @font-face {
-    font-family: 'open_sansitalic';
-    src: url('OpenSans-Italic-webfont.eot');
-    src: url('OpenSans-Italic-webfont.eot?#iefix') format('embedded-opentype'),
-         url('OpenSans-Italic-webfont.svg#open_sansitalic') format('svg'),
-         url('OpenSans-Italic-webfont.woff') format('woff'),
-         url('OpenSans-Italic-webfont.ttf') format('truetype');
-    font-weight: normal;
-    font-style: normal;
-
-}
-
-@font-face {
     font-family: 'open_sansbold';
     src: url('OpenSans-Bold-webfont.eot');
     src: url('OpenSans-Bold-webfont.eot?#iefix') format('embedded-opentype'),
          url('OpenSans-Bold-webfont.svg#open_sansbold') format('svg'),
          url('OpenSans-Bold-webfont.woff') format('woff'),
          url('OpenSans-Bold-webfont.ttf') format('truetype');
-    font-weight: normal;
-    font-style: normal;
-
-}
-
-@font-face {
-    font-family: 'open_sanssemibold';
-    src: url('OpenSans-Semibold-webfont.eot');
-    src: url('OpenSans-Semibold-webfont.eot?#iefix') format('embedded-opentype'),
-         url('OpenSans-Semibold-webfont.svg#open_sanssemibold') format('svg'),
-         url('OpenSans-Semibold-webfont.woff') format('woff'),
-         url('OpenSans-Semibold-webfont.ttf') format('truetype');
     font-weight: normal;
     font-style: normal;
 
