--- a/app/styles/screens/_location.sass
+++ b/app/styles/screens/_location.sass
@@ -3,6 +3,9 @@
     bottom: auto
   .gmaps-popup
     color: #000
+    line-height: 1.35
+    overflow: hidden
+    white-space: nowrap
     a
       color: red
   .denah-location
